# verigraph

./: .architecture.yaml  .codeclimate.yml  .gitignore  .hlint.yaml  .hspec  .mdl-verigraph.rb  .mdlrc  .stylish-haskell.yaml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  conflicts.cpx  elevator.ggx  elevator_glue.ggx  elv.cpx  example-morphisms.lua  example.lua  git-example.grl  git-example.txt  git.tg  index.html  o.cpx  o.ggx  run-tests.sh  stack.yaml  teste-conflito.ggx  teste-conflito.xml  verigraph.cabal
benchs/: agg-cli  create-pre-inputs-elevator  create-pre-inputs-guideline1  create-pre-inputs-guideline2  create-pre-inputs-guideline3  create-pre-inputs-report.txt  elevator-generic.ep.html  elevator-generic.mp.html  elevator-mono.ep.html  elevator-mono.mp.html  guid1-generic.ep.html  guid1-generic.mp.html  guid1-mono.ep.html  guid1-mono.mp.html  guid2-generic.ep.html  guid2-generic.mp.html  guid2-mono.ep.html  guid2-mono.mp.html  guid3-generic.ep.html  guid3-generic.mp.html  guid3-mono.ep.html  guid3-mono.mp.html  run-benchs  run-critical-benchs-agg  run-critical-benchs-verigraph
grammars/: CircularBuffer.ggx  createList.ggx  elevator2.ggx  initPOTest.ggx  instr.ggx  mutex.ggx  pacman.ggx  paperICGT.ggx  simple-injective-epi-pair.ggx  testeInitialConflict.ggx  treeToList.ggx
grammars/ADTs/: treeToList.ggx
grammars/Constraints/: atomic.ggx
grammars/Dangling/: removeDang.ggx
grammars/Elevator/: elevator.ggx
grammars/MedicalGuideline/: instrutivo1.ggx  instrutivo2.ggx  instrutivo3.ggx  treatment.ggx
grammars/MedicalGuideline/evolutionVersion/: instrutivo-agulha-pos.ggx  instrutivo-agulha-pre.ggx  instrutivo-infiltrar-pos.ggx  instrutivo-infiltrar-pre.ggx  instrutivo-lesao-pos.ggx  instrutivo-lesao-pre.ggx  instrutivo-original.ggx
grammars/Mutex/: mutex.ggx
grammars/Pacman/: pacman2.ggx  pacman3.ggx
grammars/Process/: abstract.ggx  server.ggx  server_2.ggx  simple-process.ggx  simple-process2.ggx  simple-process3.ggx  simple-process4.ggx  simple-process5.ggx  simple-process6.ggx  simple-process7.ggx  simple-process8.ggx
grammars/SecondOrder/: 2rules.ggx  deletion.ggx  ilCP.ggx  minimalDepInterLevel.ggx  nacs2rule.ggx  nacs2ruleINV.ggx
grammars/Server/: server.ggx
images/: Verigraph.odg
scripts/: api-haddock-html-extract.sh  check-architecture.py  test-expand-state-space.sh
src/: Example.hs  GUI.hs  Graph.hs  GraphClass.hs  GraphGrammar.hs  GraphGrammarClass.hs  GraphMorphism.hs  GraphRule.hs  GraphRuleClass.hs  Helper.hs  Main.hs  Match.hs  Morphism.hs  MorphismClass.hs  NACRule.hs  NACRuleClass.hs  NewGUI.hs  NewRelation.hs  Relation.hs  SimpleMatch.hs  TypedGraphMorphism.hs  TypedMorphism.hs  TypedMorphismClass.hs  Valid.hs  verigraph.cabal
src/Abstract/: AdhesiveHLR.hs  DPO.hs  Morphism.hs  Relation.hs
src/Analysis/: ConcurrentRules.hs  CriticalPairs.hs  CriticalSequence.hs  DiagramAlgorithms.hs  EpiPairs.hs  GPToJPG.hs  GPToVeri.hs  GluingConditions.hs  GraphPart.hs  InterLevelCP.hs  Matches.hs  MatchesOrig.hs  VeriToGP.hs
src/CLI/: ApplySndOrderRules.hs  Cli.hs  ConcurrentRules.hs  CriticalPairAnalysis.hs  ExpandStateSpace.hs  GlobalOptions.hs  GtxlCli.hs  GxlCli.hs  ModelChecker.hs  PBComparison.hs  ParallelIndependence.hs  Processes.hs  RunBenchs.hs  SavePreInputs.hs  Util.hs
src/CriticalPairs/: CriticalPairs.hs  CriticalPairsTeste.hs  CriticalPairs_Old.hs  CriticalSequence.hs  Deletion.hs  Estruturas.hs  GPToJPG.hs  GPToVeri.hs  GraphPart.hs  Matches.hs  VeriToGP.hs
src/GUI/: Coords.hs  Editing.hs  GUI.hs  Render.hs
src/Graph/: ConcurrentRules.hs  EpiPairs.hs  FindMorphism.hs  FindMorphismSndOrder.hs  GPToVeri.hs  Graph.hs  GraphGrammar.hs  GraphMorphism.hs  GraphPart.hs  GraphRule.hs  InvertNac.hs  Match.hs  MorphismTest.hs  NacOperations.hs  Rewriting.hs  RuleMorphism.hs  SndOrderRule.hs  Subgraph.hs  TypedGraphMorphism.hs  VeriToGP.hs
src/Partitions/: GPToVeri.hs  GraphPart.hs  VeriToGP.hs
src/SndOrder/: Morphism.hs  Rule.hs
src/TypedGraph/: EpiPairs.hs  FindMorphism.hs  GraphGrammar.hs  GraphRule.hs  Morphism.hs  MorphismCore.hs
src/XML/: GGXParseIn.hs  GGXParseOut.hs  GGXReader.hs  GGXReader.hs-boot  GGXSndOrderReader.hs  GGXWriter.hs  GTXLReader.hs  ParseSndOrderRule.hs  ParsedTypes.hs  XMLUtilities.hs
src/experiments/: Dag.hs  Main.hs
src/repl/: GrLang.hs  Main.hs
src/repl/Util/: Lua.hs
src/repl/lua/: grlang.lua  help.lua
test/: 2rules.ggx  aggConflitoRepetido.ggx  elevator.ggx  ev.ggx  invalid2rule.ggx  mutualExclusion.ggx  nacs2rule.ggx  pacman.ggx  paperICGT.ggx  produceDangling.ggx  teseRodrigo.ggx  teste2rule.ggx
tests/: CocompleteTest.hs  CriticalPairsSequencesTest.hs  CtlTest.hs  EssentialCPTest.hs  Example.hs  GraphProcessTest.hs  GraphTest.hs  HSpecRunner.hs  HSpecTests.hs  MorphismTest.hs  PartitionsTest.hs  PullbackTest.hs  SecondOrderTest.hs  SmallExample.hs  Utils.hs
tests/Abstract/Category/: CocompleteSpec.hs
tests/Analysis/: CriticalPairsSpec.hs  CriticalSequenceSpec.hs  EssentialCriticalPairsSpec.hs  ParallelIndependentSpec.hs
tests/Analysis/Interlevel/: InterLevelCPSpec.hs
tests/Category/LabeledGraph/: CocompleteSpec.hs  FindMorphismSpec.hs  FinitarySpec.hs  JointlyEpimorphismsSpec.hs  LimitSpec.hs  MorphismSpec.hs
tests/Category/TypedGraph/: CocompleteSpec.hs  CompleteSpec.hs  FinalPullbackComplementSpec.hs
tests/CtlTest/: TestParser.hs  TestSemantics.hs  Utils.hs
tests/Data/: GraphsSpec.hs  LabeledGraphSpec.hs  PartitionSpec.hs
tests/Data/Graphs/: GraphMorphismSpec.hs
tests/Data/TypedGraph/: MorphismSpec.hs  PartitionSpec.hs
tests/GrLang/: CompilerSpec.hs  ParserSpec.hs  QuickCheck.hs  ReplIntegrationSpec.hs  TestUtils.hs
tests/GrLang/CompilerSpec/: case1.grl  case10.grl  case11.grl  case12.grl  case13.grl  (+25 more)
tests/Graph/: GraphMorphismSpec.hs  GraphSpec.hs
tests/LabeledGraph/: FindMorphismSpec.hs  MorphismSpec.hs
tests/SymbolicGraph/: DataAlgebraSpec.hs
tests/Util/: Test.hs
tests/grammars/: NacManipulation.ggx  elevator.ggx  fpbc.ggx  mutex2.ggx  pacman2.ggx  partialInjectivity.ggx  secondOrderMatchTest.ggx  sndOrderEpi.ggx  teseRodrigo.ggx
(+91 files in other folders)
