name:                verigraph
version:             1.1.0
synopsis:            Software specification and verification tool based on graph rewriting.
-- description:
license:             Apache-2.0
license-file:        LICENSE
author:              Verites - Grupo de Verificação, Validação e Teste de Sistemas Computacionais
maintainer:          rma@inf.ufrgs.br
-- copyright:
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.22

library
  default-language:    Haskell2010
  hs-source-dirs:      src/library/
  ghc-options:         -O -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind -fno-warn-orphans
  other-extensions:    TypeFamilies, MultiParamTypeClasses, FlexibleContexts
  build-depends:       base >=4.8 && <4.10,
                       containers >=0.4 && <0.6,
                       hxt >=9.3.1.15 && <9.4,
                       mtl >=2.2 && <2.3,
                       parsec >=3.1 && <3.2,
                       QuickCheck >=2.8 && <2.10,
                       semigroups >= 0.18,
                       set-monad >= 0.2,
                       split >= 0.2,
                       wl-pprint >=1.2 && <1.3
  exposed-modules:     Abstract.Category.AdhesiveHLR
                       Abstract.Category.AdhesiveHLR.Constraint
                       Abstract.Category.Cocomplete
                       Abstract.Category.Complete
                       Abstract.Category.JointlyEpimorphisms
                       Abstract.Rewriting.DPO
                       Abstract.Rewriting.DPO.Derivation
                       Abstract.Rewriting.DPO.Process
                       Abstract.Rewriting.DPO.StateSpace
                       Abstract.Category.FinitaryCategory
                       Base.Cardinality
                       Base.Isomorphic
                       Base.Valid
                       Analysis.ConcurrentRules
                       Analysis.CriticalPairs
                       Analysis.CriticalSequence
                       Analysis.EssentialCriticalPairs
                       Analysis.Interlevel.EvolutionarySpans
                       Analysis.Interlevel.InterLevelCP
                       Analysis.ParallelIndependent
                       Analysis.Processes
                       Category.Graph
                       Category.TypedGraph
                       Category.TypedGraph.FindMorphism
                       Category.TypedGraphRule
                       Category.TypedGraphRule.JointlyEpimorphisms
                       Data.Graphs
                       Data.Graphs.Morphism
                       Data.Graphs.QuickCheck
                       Data.Partition
                       Data.Relation
                       Data.TypedGraph
                       Data.TypedGraph.Morphism
                       Image.Dot
                       Logic.Model
                       Logic.Ctl
                       Rewriting.DPO.TypedGraphRule.NacManipulation
                       Rewriting.DPO.TypedGraphRule
                       Rewriting.DPO.TypedGraph.GraphProcess.OccurrenceRelation
                       Rewriting.DPO.TypedGraph.GraphProcess
                       Rewriting.DPO.TypedGraph
                       Util.Closures
                       Util.List
                       XML.GGXReader
                       XML.GGXWriter
  other-modules:
                       Abstract.Rewriting.DPO.DiagramAlgorithms
                       Logic.Ctl.Base
                       Logic.Ctl.Parser
                       Logic.Ctl.Semantics
                       Category.TypedGraph.AdhesiveHLR
                       Category.TypedGraph.Cocomplete
                       Category.TypedGraph.JointlyEpimorphisms
                       Data.TypedGraph.Subgraph
                       Data.TypedGraph.Partition
                       Data.TypedGraph.Partition.FromVerigraph
                       Data.TypedGraph.Partition.Generator
                       Data.TypedGraph.Partition.ToVerigraph
                       Data.TypedGraph.Partition.Types
                       Data.TypedGraph.Partition.Util
                       Category.TypedGraphRule.AdhesiveHLR
                       Category.TypedGraphRule.Cocomplete
                       Category.TypedGraph.CommutingSquares
                       Category.TypedGraphRule.FindMorphism
                       XML.Formulas
                       XML.GGXParseIn
                       XML.GGXParseOut
                       XML.GGXReader.SndOrder
                       XML.GGXReader.Span
                       XML.ParsedTypes
                       XML.ParseSndOrderRule
                       XML.Utilities
                       XML.XMLUtilities


executable verigraph
  default-language:    Haskell2010
  hs-source-dirs:      src/CLI/
  main-is:             Cli.hs
  ghc-options:         -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind
  other-extensions:    TypeFamilies, MultiParamTypeClasses, FlexibleContexts
  build-depends:       base, verigraph,
                       containers,
                       hxt,
                       matrix >= 0.3,
                       optparse-applicative>=0.12 && < 0.14,
                       split >= 0.2
  other-modules:       ApplySndOrderRules
                       ConcurrentRules
                       CriticalPairAnalysis
                       ParallelIndependence
                       Processes
                       GlobalOptions

executable verigraph-mcheck
  default-language:    Haskell2010
  hs-source-dirs:      src/CLI/
  main-is:             ModelChecker.hs
  ghc-options:         -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind
  other-extensions:    TypeFamilies, MultiParamTypeClasses, FlexibleContexts
  build-depends:       base, verigraph,
                       containers,
                       hxt,
                       optparse-applicative>=0.12 && < 0.14,
                       wl-pprint
  other-modules:       GlobalOptions


test-suite HSpecTests
  default-language:    Haskell2010
  hs-source-dirs:      tests/
  main-is:             HSpecRunner.hs
  ghc-options:         -threaded -O
  type:                exitcode-stdio-1.0
  build-depends:       base, verigraph,
                       containers,
                       combinat >= 0.2.8,
                       matrix >= 0.3.4,
                       wl-pprint,
                       QuickCheck,
                       hspec >=2.4,
                       hspec-discover >=2.4,
                       HUnit >=1.3.1.2

test-suite GraphProcessTest
  default-language:    Haskell2010
  hs-source-dirs:      tests/
  main-is:             GraphProcessTest.hs
  ghc-options:         -threaded -O
  type:                exitcode-stdio-1.0
  build-depends:       base, verigraph,
                       HUnit >= 1.3.1.2
  other-modules:       Utils

test-suite CocompleteTest
  default-language:    Haskell2010
  hs-source-dirs:      tests/
  main-is:             CocompleteTest.hs
  ghc-options:         -threaded -O
  type:                exitcode-stdio-1.0
  build-depends:       base, verigraph,
                       HUnit >= 1.3.1.2
  other-modules:       Utils
