name:                verigraph
version:             1.1.0
synopsis:            Software specification and verification tool based on graph rewriting.
-- description:
license:             Apache-2.0
license-file:        LICENSE
author:              Verites - Grupo de Verificação, Validação e Teste de Sistemas Computacionais
maintainer:          rma@inf.ufrgs.br
-- copyright:
category:            Data
build-type:          Simple
-- extra-source-files:
data-files:          src/repl/lua/*.lua
cabal-version:       >=1.22

library
  default-language:    Haskell2010
  hs-source-dirs:      src/library/
  ghc-options:         -O -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind -fno-warn-orphans
  other-extensions:    TypeFamilies, MultiParamTypeClasses, FlexibleContexts
  build-depends:       base >=4.8 && <4.11,
                       containers >=0.4 && <0.6,
                       directory >= 1.3 && <2,
                       filepath >= 1.4 && <2,
                       hxt >=9.3.1.15 && <9.4,
                       mtl >=2.2 && <2.3,
                       parallel >= 3.2,
                       parsec >=3.1 && <3.2,
                       prettyprinter >=1.1 && <1.2,
                       QuickCheck >=2.8 && <2.11,
                       semigroups >= 0.18,
                       set-monad >= 0.2 && <0.3,
                       split >= 0.2,
                       text >=1.2 && <1.3
  exposed-modules:     Abstract.Category.Adhesive
                       Abstract.Category.FindMorphism
                       Abstract.Category.Finitary
                       Abstract.Category.Limit
                       Abstract.Category
                       Abstract.Constraint
                       Abstract.Rewriting.DPO
                       Abstract.Rewriting.DPO.Derivation
                       Abstract.Rewriting.DPO.Process
                       Abstract.Rewriting.DPO.StateSpace
                       Analysis.ConcurrentRules
                       Analysis.CriticalPairs
                       Analysis.CriticalSequence
                       Analysis.EssentialCriticalPairs
                       Analysis.Interlevel.EvolutionarySpans
                       Analysis.Interlevel.InterLevelCP
                       Analysis.ParallelIndependent
                       Analysis.Processes
                       Base.Annotation
                       Base.Cardinality
                       Base.Isomorphic
                       Base.Location
                       Base.Valid
                       Category.Graph
                       Category.TypedGraph
                       Category.TypedGraphRule
                       Data.DList
                       Data.Graphs
                       Data.Graphs.Morphism
                       Data.Graphs.QuickCheck
                       Data.Partition
                       Data.Relation
                       Data.TypedGraph
                       Data.TypedGraph.Morphism
                       GrLang.AST
                       GrLang.Compiler
                       GrLang.Monad
                       GrLang.Parser
                       GrLang.Value
                       Image.Dot.Prettyprint
                       Image.Dot.TypedGraph
                       Image.Dot.StateSpace
                       Logic.Model
                       Logic.Ctl
                       Rewriting.DPO.TypedGraphRule.NacManipulation
                       Rewriting.DPO.TypedGraphRule.Scheduling
                       Rewriting.DPO.TypedGraphRule
                       Rewriting.DPO.TypedGraph.GraphProcess.OccurrenceRelation
                       Rewriting.DPO.TypedGraph.GraphProcess
                       Rewriting.DPO.TypedGraph
                       Util.Closures
                       Util.List
                       Util.Map
                       Util.Monad
                       XML.GGXReader
                       XML.GGXWriter
                       XML.GPRReader.GXLReader
                       XML.XMLUtilities
  other-modules:
                       Abstract.Rewriting.DPO.DiagramAlgorithms
                       Category.TypedGraph.Adhesive
                       Category.TypedGraph.Category
                       Category.TypedGraph.CommutingSquares
                       Category.TypedGraph.FindMorphism
                       Category.TypedGraph.Finitary
                       Category.TypedGraph.Limit
                       Category.TypedGraphRule.Adhesive
                       Category.TypedGraphRule.Category
                       Category.TypedGraphRule.FindMorphism
                       Category.TypedGraphRule.Finitary
                       Category.TypedGraphRule.Limit
                       Data.TypedGraph.Partition
                       Data.TypedGraph.Partition.FromVerigraph
                       Data.TypedGraph.Partition.Generator
                       Data.TypedGraph.Partition.ToVerigraph
                       Data.TypedGraph.Partition.Types
                       Data.TypedGraph.Partition.Util
                       Data.TypedGraph.Subgraph
                       Logic.Ctl.Base
                       Logic.Ctl.Parser
                       Logic.Ctl.Semantics
                       XML.Formulas
                       XML.GGXParseIn
                       XML.GGXParseOut
                       XML.GGXReader.SndOrder
                       XML.GGXReader.Span
                       XML.GPRReader.GXLInstatiator
                       XML.GPRReader.GXLParseIn
                       XML.GPRReader.GXLPreProcessing
                       XML.ParsedTypes
                       XML.ParseSndOrderRule
                       XML.Utilities

executable verigraph
  default-language:    Haskell2010
  hs-source-dirs:      src/CLI/
  main-is:             Cli.hs
  ghc-options:         -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind -threaded -with-rtsopts -N
  other-extensions:    TypeFamilies, MultiParamTypeClasses, FlexibleContexts
  build-depends:       base, verigraph,
                       containers,
                       filepath,
                       hxt,
                       matrix >= 0.3,
                       optparse-applicative>=0.12 && < 0.15,
                       parallel >= 3.2,
                       prettyprinter,
                       split >= 0.2
  other-modules:       ApplySndOrderRules
                       ConcurrentRules
                       CriticalPairAnalysis
                       ParallelIndependence
                       Processes
                       GlobalOptions
                       Util

executable verigraph-mcheck
  default-language:    Haskell2010
  hs-source-dirs:      src/CLI/
  main-is:             ModelChecker.hs
  ghc-options:         -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind
  other-extensions:    TypeFamilies, MultiParamTypeClasses, FlexibleContexts
  build-depends:       base, verigraph,
                       containers,
                       hxt,
                       optparse-applicative>=0.12 && < 0.15,
                       prettyprinter
  other-modules:       GlobalOptions

executable verigraph-repl
  default-language:    Haskell2010
  hs-source-dirs:      src/repl/
  main-is:             Main.hs
  ghc-options:         -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind
  build-depends:       base, verigraph,
                       array >=0.5 && <1.0,
                       bytestring >=0.10 && <1.0,
                       containers,
                       filepath,
                       haskeline >=0.7 && <1.0,
                       hslua >=0.9.4 && <1.0,
                       mtl,
                       optparse-applicative>=0.12 && < 0.15,
                       prettyprinter,
                       text
  autogen-modules:     Paths_verigraph
  other-modules:       GrLang
                       Paths_verigraph
                       Util.Lua


test-suite HSpecTests
  default-language:    Haskell2010
  hs-source-dirs:      tests/
  main-is:             HSpecRunner.hs
  ghc-options:         -threaded -O
  type:                exitcode-stdio-1.0
  build-depends:       base, verigraph,
                       call-stack,
                       containers,
                       combinat >= 0.2.8,
                       directory,
                       deepseq,
                       filepath,
                       matrix >= 0.3.4,
                       mtl,
                       prettyprinter,
                       process >=1.4,
                       QuickCheck,
                       hspec >=2.4,
                       hspec-discover >=2.4,
                       HUnit >=1.3.1.2,
                       text

  other-modules:       Abstract.Rewriting.DPO.ProcessSpec
                       Analysis.CriticalPairsSpec
                       Analysis.CriticalSequenceSpec
                       Analysis.EssentialCriticalPairsSpec
                       Analysis.Interlevel.InterLevelCPSpec
                       Analysis.ParallelIndependentSpec
                       Category.TypedGraph.FinalPullbackComplementSpec
                       Category.TypedGraph.CompleteSpec
                       Category.TypedGraph.CocompleteSpec
                       Data.Graphs.GraphMorphismSpec
                       Data.GraphsSpec
                       Data.PartitionSpec
                       Data.TypedGraph.MorphismSpec
                       Data.TypedGraph.Morphism.FindMorphismSpec
                       Data.TypedGraph.Morphism.FindMorphismSpec.FindCospanCommuterTest
                       Data.TypedGraph.Morphism.FindMorphismSpec.FindMorphismsTest
                       Data.TypedGraph.PartitionSpec
                       GrLang.CompilerSpec
                       GrLang.ParserSpec
                       GrLang.ReplIntegrationSpec
                       GrLang.TestUtils
                       HSpecTests
                       Logic.Ctl.ModelCheckerSpec
                       Logic.Ctl.ParserSpec
                       Logic.Ctl.TestUtils
                       Rewriting.DPO.TypedGraphRule.NacManipulationSpec
                       Rewriting.DPO.TypedGraphRuleSpec
                       Util.Test
                       XML.GPRReader.GXLReaderSpec
